--- a/styles.css
+++ b/styles.css
@@ -51,19 +51,24 @@ main {
 
 /* Right - Info Section */
 .info_section {
-    display: inline-block;
+    display: grid;
+    position: relative;
+    align-items: flex-end;   
     float: left;
     height: 100%;
-    width: 50%;
+    width: 70%;
 
 }
 .info {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 80%;
-    width: 100%;
+    width: auto;
     background-color: #1D2C67;
     border-radius: 10px;
     float: left;
+    margin-left: 25px;
 }
 .storage-info {
     display: inline-block;
@@ -75,9 +80,12 @@ main {
     }
 .left-info {
     background-color: #fff;
+    right: 60px;
+    top: 0;
     width: 150px;
-    height: 20%;
+    height: 50px;
     border-radius: 10px;
+    position: absolute;
 }
 
 .empty {
