--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ main {
     float: left;
     height: 100%;
     width: 70%;
-
 }
 .info {
     display: flex;
@@ -79,15 +78,28 @@ main {
         color: #fff;
     }
 .left-info {
+    display: grid;
+    align-items: center;
     background-color: #fff;
     right: 60px;
     top: 0;
     width: 150px;
-    height: 50px;
+    height: 80px;
     border-radius: 10px;
     position: absolute;
 }
-
+.left-info > p > span {
+    align-items: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+.left-info > p {
+    display: flex;
+    font-weight: 400;
+    align-items: center;
+    justify-content: center;
+}
 .empty {
     float: left;
     color: #fff;
