--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: #0c122c;
+    margin: 0;
     text-align: center;
     font-size: 14px;
     font-family: 'Raleway', sans-serif;
@@ -60,8 +61,8 @@ main {
     width: 70%;
 }
 .info {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    justify-content: left;
     align-items: center;
     height: 80%;
     width: auto;
@@ -73,11 +74,25 @@ main {
 .storage-info {
     display: inline-block;
     color: #848794;
-    float: left;
+    width: 100%;
 }
+    .storage-info > p {
+        display: inline-block;
+        float: left;
+        width: 100%;
+    }
     .storage-info > p > span {
+        display: inline-block;
         color: #fff;
     }
+.progress-bar {
+    display: inline-block;
+    background-color: #0c122c;
+    border-radius: 15px;
+    width: 100%;
+    float: left;
+}
+
 .left-info {
     display: grid;
     align-items: center;
