--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 
 body {
     background-image: url(images/bg-desktop.png);
-    background-repeat: no-repeat;
     background-size: contain;
-    background-position: 50% 125%;
-    background-color: #0c122c;
-    margin: 0;
+    background-attachment: fixed;
+    background-color: rgb(12, 18, 44);
     text-align: center;
     font-size: 14px;
-    font-family: 'Raleway', sans-serif;
+    font-family: Raleway, sans-serif;
+    background-repeat: no-repeat;
+    background-position: 50% 125%;
+    margin: 0px;
 }
 main {
     display: inline-block;
